--- a/sspack/sspack.csproj
+++ b/sspack/sspack.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Exporters\BmpImageExporter.cs" />
     <Compile Include="Exporters\JpegImageExporter.cs" />
+    <Compile Include="Packing\FrankRectanglePacker.cs" />
     <Compile Include="Packing\ArevaloRectanglePacker.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Exporters\Exporters.cs" />
